feat: controller get endpoint and improve transfer functionality
