# model/transfer.go
@@ -32,15 +32,29 @@ const (
 	TransferStatusFailed  TransferStatus = "FAILED"
 )
 
+//type Transfer struct {
+//	Id                   string         `gorm:"id" json:"id"`
+//	MerchantId           string         `gorm:"merchant_id" json:"merchantId"`
+//	MerchantRefId        string         `gorm:"merchant_ref_id" json:"merchantRefId"`
+//	BankCode             string         `gorm:"bank_code" json:"bankCode"`
+//	BankRefId            *string        `gorm:"bank_ref_id" json:"bankRefId"`
+//	Amount               int64          `gorm:"amount" json:"amount"`
+//	Status               TransferStatus `gorm:"status" json:"status"`
+//	DestinationAccNumber string         `gorm:"destination_acc_number" json:"destinationAccNumber"`
+//
+//	Created time.Time `gorm:"created"`
+//	Updated time.Time `gorm:"updated"`
+//}
+
 type Transfer struct {
-	Id                   string         `gorm:"id" json:"id"`
-	MerchantId           string         `gorm:"merchant_id" json:"merchantId"`
-	MerchantRefId        string         `gorm:"merchant_ref_id" json:"merchantRefId"`
-	BankCode             string         `gorm:"bank_code" json:"bankCode"`
-	BankRefId            *string        `gorm:"bank_ref_id" json:"bankRefId"`
-	Amount               int64          `gorm:"amount" json:"amount"`
-	Status               TransferStatus `gorm:"status" json:"status"`
-	DestinationAccNumber string         `gorm:"destination_acc_number" json:"destinationAccNumber"`
+	Id                   string         `gorm:"id"`
+	MerchantId           string         `gorm:"merchant_id"`
+	MerchantRefId        string         `gorm:"merchant_ref_id"`
+	BankCode             string         `gorm:"bank_code"`
+	BankRefId            *string        `gorm:"bank_ref_id"`
+	Amount               int64          `gorm:"amount"`
+	Status               TransferStatus `gorm:"status"`
+	DestinationAccNumber string         `gorm:"destination_acc_number"`
 
 	Created time.Time `gorm:"created"`
 	Updated time.Time `gorm:"updated"`
