# pkg/controller/transfer.go
@@ -23,10 +23,11 @@ func NewTransferController(
 }
 
 func (ctrl *transferController) registerEndpoints(group fiber.Router) {
-	group.Post("/", ctrl.Transfer)
+	group.Post("/", ctrl.TransferRequest)
+	group.Get("/:id", ctrl.GetTransfer)
 }
 
-func (ctrl *transferController) Transfer(ctx *fiber.Ctx) (err error) {
+func (ctrl *transferController) TransferRequest(ctx *fiber.Ctx) (err error) {
 	var transferReqBody model.TransferReqBody
 	bodyBytes := ctx.Body()
 	err = json.Unmarshal(bodyBytes, &transferReqBody)
@@ -34,6 +35,15 @@ func (ctrl *transferController) Transfer(ctx *fiber.Ctx) (err error) {
 		return fiber.ErrBadRequest
 	}
 	resBody, err := ctrl.transferService.Transfer(ctx.Context(), transferReqBody)
+	if err != nil {
+		return err
+	}
+	return ctx.JSON(resBody)
+}
+
+func (ctrl *transferController) GetTransfer(ctx *fiber.Ctx) error {
+	transferId := ctx.Params("id")
+	resBody, err := ctrl.transferService.GetTransfer(ctx.Context(), transferId)
 	if err != nil {
 		return err
 	}
